--- a/catalog.html
+++ b/catalog.html
@@ -43,10 +43,10 @@
             <span class="favorites-badge">12</span>
           </a>
         </li>
-        <li class="navigation-item-button">
-          <a class="button" href="#search-hotel">Хочу сюда!</a>
-        </li>
       </ul>
+      <div class="navigation-item-button">
+        <a class="button navigation-button-search" href="#search-hotel">Хочу сюда!</a>
+      </div>
     </nav>
     </header>
 
@@ -130,7 +130,7 @@
             </div>
 
             <div class="wrapper-price">
-              <fieldset class="hotel-filter-group">
+              <fieldset class="hotel-filter-group hotel-filter-range">
                 <legend class="hotel-filter-title filter-title-price">Стоимость, ₽:</legend>
                 <ul class="range-wrapper-inputs">
                   <li class="range-inputs">
@@ -279,7 +279,7 @@
         <div class="pagination-filter">
           <ol class="pagination">
             <li class="pagination-item">
-              <a class="pagination-link pagination-current" aria-current="page">1</a>
+              <a class="pagination-link pagination-current" href="#" aria-current="page">1</a>
             </li>
             <li class="pagination-item">
               <a class="pagination-link" href="#">2</a>
@@ -364,7 +364,9 @@
         </li>
       </ul>
 
+      <div class="wrapper-phone-link">
         <a class="phone-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      </div>
 
         <div class="logo-html-wrapper">
           <a class="html-link" href="https://htmlacademy.ru/">
