--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
               <span class="favorites-badge">12</span>
             </a>
           </li>
-          <li class="navigation-item navigation-item-button">
-            <a class="button" href="#search-hotel">Хочу сюда!</a>
-          </li>
         </ul>
+        <div class="navigation-item-button">
+          <a class="button navigation-button-search" href="#search-hotel">Хочу сюда!</a>
+        </div>
       </nav>
       </header>
 
@@ -179,7 +179,10 @@
             </li>
           </ul>
 
-          <a class="phone-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          <div class="wrapper-phone-link">
+            <a class="phone-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          </div>
+
 
           <div class="logo-html-wrapper">
             <a class="html-link" href="https://htmlacademy.ru/">
