--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <header class="page-header">
+      <header>
       <nav class="navigation container-content">
         <a class="navigation-logo" href="index.html" aria-current="page">
           <img class="page-header-logo" src="images/svg/logo-sedona.svg" width="139" height="70" alt="Логотип Седона.">
@@ -51,10 +51,10 @@
       </nav>
       </header>
 
-      <main class="main-container main-index">
+      <main class="main-container">
           <section class="index-background-image">
             <h1 class="visually-hidden">Сайт города Седона</h1>
-            <img class="content-img" src="images/svg/welcome-sedona.svg" width="458" height="352" alt="Добро пожаловать в Седону.">
+            <img src="images/svg/welcome-sedona.svg" width="458" height="352" alt="Добро пожаловать в Седону.">
           </section>
 
        <section class="advantages">
